--- a/styles/subStyles/rank-stats.scss
+++ b/styles/subStyles/rank-stats.scss
@@ -344,7 +344,7 @@
     padding: 5px 0;
     position: absolute;
     top: 48px;
-    z-index: 1;
+    z-index: 10;
     & > div {
       display: flex;
       align-items: center;
@@ -1002,6 +1002,7 @@
     background: #0f0f10;
     border-radius: 5px;
     display: flex;
+    z-index: 10;
     & > div {
       width: 100%;
     }
