--- a/styles/subStyles/selector.scss
+++ b/styles/subStyles/selector.scss
@@ -22,7 +22,7 @@
     background-color: #0c0c0c;
     min-width: 100%;
     width: max-content;
-    z-index: 1;
+    z-index: 10;
     border-radius: 8px;
     max-height: 200px;
     overflow-y: scroll;
